--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <button (click)="clean()" style="margin-left: 5px">Clean</button>
 <pre>{{ arrayClick | json }}</pre>
 
-<app-comp1></app-comp1>
+<!-- <app-comp1></app-comp1> -->
 
 <div class="rainbow">
   <table>
